# adv_suite

./: README.md  pyproject.toml
adv_suite/: api.py  hooks.py  install.py  modules.txt  overrides.py  patches.txt  project_hooks.py  todo_hooks.py  uninstall.py
adv_suite/adv_suite/custom/: project.json
adv_suite/adv_suite/doctype/advertech_settings/: advertech_settings.js  advertech_settings.json  advertech_settings.py  test_advertech_settings.py
adv_suite/adv_suite/doctype/delivery_mode/: delivery_mode.js  delivery_mode.json  delivery_mode.py  test_delivery_mode.py
adv_suite/adv_suite/doctype/installation_base/: installation_base.js  installation_base.json  installation_base.py  test_installation_base.py
adv_suite/adv_suite/doctype/product_finish/: product_finish.js  product_finish.json  (+2 more)
adv_suite/fixtures/: custom_field.json  manufacturing_settings.json  patches_methods.py  product_finish.json  property_setter.json  task_type.json
adv_suite/patches/: add_type_of_task_garantia.py  create_custom_docperms.py  remove_and_add_type_of_task.py  remove_custom_fields_project.py  update_custom_last_assignment_date.py  update_sales_order_items_with_bom.py
adv_suite/public/js/: adv_suite.bundle.js  adv_suite.js  bom._bundle.js  bom_custom.js  doctype_custom.js  job_card._bundle.js  job_card_custom.js  project.bundle.js  project_custom.js  quotation.bundle.js  quotation_custom.js  sales_order.bundle.js  sales_order_custom.js  stock_entry._bundle.js  stock_entry_custom.js  task.bundle.js  task_custom.js  task_list.js  todo.bundle.js
adv_suite/translations/: es-DO.csv
(+30 files in other folders)
